# oauth2-fastapi-testing

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/app/adapters/auth/: token.py
src/app/adapters/data/: repository.py
src/app/api/: exc_handlers.py  stub.py
src/app/api/dependencies/: authentication.py
src/app/api/router/: auth.py
src/app/domain/: exceptions.py
src/app/main/: di.py  web.py
src/app/use_cases/: users.py
tests/api/: test_auth_router.py
